--- a/index.html
+++ b/index.html
@@ -4,9 +4,37 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./public/style.css">
 </head>
 <body>
+	
+	<!-- header -->
+	<div class="header">
+		<div class="contentheader">
+			<div class="itemheader1">
+				<img class="logo" src="./public/images/logo.jpg" alt="no logo" />
+			</div>
+			<div class="itemheader2">
+				<img class="tel" src="./public/images/tel.jpg" alt="no tel" />
+			</div>
+			<div class="clear"></div>
+		</div>
+	</div>
+	<!-- /header -->
+
+
+	<!-- nav(menu) -->
+	
+
+	<!-- /nav(menu) -->
+
+	<!-- content -->
+
+	<!-- footer -->
+
+
+
+
 
 
 </body>
